cmake_minimum_required(VERSION 3.23)
project(CONECTDOT_SAMPLE02)

set(CMAKE_CXX_STANDARD 14)

include_directories(Project)

add_executable(CONECTDOT_SAMPLE02
        Project/2DShapes.h
        Project/Actor.cpp
        Project/Actor.h
        Project/Adapter.h
        Project/BaseEngineCollision.cpp
        Project/BaseEngineCollision.h
        Project/BaseEngineCore.cpp
        Project/BaseEngineCore.h
        Project/BaseEngineEmpty.h
        Project/Beacon.cpp
        Project/Beacon.h
        Project/Circle.cpp
        Project/Circle.h
        Project/CollisionComponent.cpp
        Project/CollisionComponent.h
        Project/Component.cpp
        Project/Component.h
        Project/EngineComponent.h
        Project/Game.cpp
        Project/Game.h
        Project/GameApp.cpp
        Project/GameApp.h
        Project/Geometry2D.cpp
        Project/Geometry2D.h
        Project/Geometry2D.ipp
        Project/IBaseEngineCollider.cpp
        Project/IBaseEngineCollider.h
        Project/IBaseEngineEmpty.cpp
        Project/IBaseEngineEmpty.h
        Project/IBaseEngineRender.cpp
        Project/IBaseEngineRender.h
        Project/IBaseEngineTexture.cpp
        Project/IBaseEngineTexture.h
        Project/Idle.cpp
        Project/Idle.h
        Project/InputActor.cpp
        Project/InputActor.h
        Project/InputComponent.cpp
        Project/InputComponent.h
        Project/InputManager.cpp
        Project/InputManager.h
        Project/IReceivablePower.h
        Project/ISendablePower.h
        Project/IShape.cpp
        Project/IShape.h
        Project/Jump.cpp
        Project/Jump.h
        Project/MainApp.cpp
        Project/MainApp.h
        Project/PlayerActor.cpp
        Project/PlayerActor.h
        Project/PlayerComponent.cpp
        Project/PlayerComponent.h
        Project/Point.cpp
        Project/Point.h
        Project/Pow.h
        Project/Rect.cpp
        Project/Rect.h
        Project/RenderComponent.cpp
        Project/RenderComponent.h
        Project/RenderMof.cpp
        Project/RenderMof.h
        Project/ShapeRenderComponent.cpp
        Project/ShapeRenderComponent.h
        Project/Sprite.cpp
        Project/Sprite.h
        Project/SpriteComponent.cpp
        Project/SpriteComponent.h
        Project/StateMachine.h
        Project/TextureMof.cpp
        Project/TextureMof.h
        Project/Vector.cpp
        Project/Vector.h
        Project/WinMain.cpp
        Project/YesNo.h)
