cmake_minimum_required(VERSION 3.20)
project(MofLibrary C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(Include)
include_directories(Include/Collision)
include_directories(Include/Common)
include_directories(Include/Framework)
include_directories(Include/Framework/Android)
include_directories(Include/Framework/Window)
include_directories(Include/Framework/Window/Windows)
include_directories(Include/Framework/Windows)
include_directories(Include/Framework/Windows/DirectX11)
include_directories(Include/Graphics)
include_directories(Include/Graphics/DirectX11)
include_directories(Include/Graphics/DirectX11/DirectXTex)
include_directories(Include/Graphics/DirectX11/Effects11)
include_directories(Include/Graphics/DirectX11/Shader)
include_directories(Include/Graphics/libpng)
include_directories(Include/Graphics/mdl)
include_directories(Include/Graphics/MQO)
include_directories(Include/Graphics/OpenGL)
include_directories(Include/Graphics/OpenGL/Shader)
include_directories(Include/Graphics/PhotoShop)
include_directories(Include/Graphics/PMD)
include_directories(Include/Graphics/SpriteStudio)
include_directories(Include/Graphics/SpriteStudio/babel)
include_directories(Include/Graphics/XFile)
include_directories(Include/Input)
include_directories(Include/Input/Android)
include_directories(Include/Input/DirectInput)
include_directories(Include/Input/XInput)
include_directories(Include/Math)
include_directories(Include/Movie)
include_directories(Include/Movie/DirectShow)
include_directories(Include/Network)
include_directories(Include/Sound)
include_directories(Include/Sound/MP3)
include_directories(Include/Sound/OGG)
include_directories(Include/Sound/OpenAL)
include_directories(Include/Sound/OpenSL)
include_directories(Include/Sound/XAudio)
include_directories(Include/Utilities)
include_directories(Include/XML)

add_executable(MofLibrary
        Include/Collision/Box.h
        Include/Collision/Box.inl
        Include/Collision/Capsule.h
        Include/Collision/Capsule.inl
        Include/Collision/Circle.h
        Include/Collision/Circle.inl
        Include/Collision/CollisionCommon.h
        Include/Collision/Ray.h
        Include/Collision/Ray.inl
        Include/Collision/Rectangle.h
        Include/Collision/Rectangle.inl
        Include/Collision/Sphere.h
        Include/Collision/Sphere.inl
        Include/Common/Allocator.h
        Include/Common/Allocator.inl
        Include/Common/AndroidSingleGameApplication.h
        Include/Common/AndroidSingleGameApplication.inl
        Include/Common/Application.h
        Include/Common/CRC32.h
        Include/Common/CRC32.inl
        Include/Common/DecryptFile.h
        Include/Common/DynamicArray.h
        Include/Common/DynamicArray.inl
        Include/Common/EncryptFile.h
        Include/Common/File.h
        Include/Common/KeyFrame.h
        Include/Common/KeyFrame.inl
        Include/Common/KeyFrameArray.h
        Include/Common/KeyFrameArray.inl
        Include/Common/Lock.h
        Include/Common/Lock.inl
        Include/Common/MofBase.h
        Include/Common/MofCommon.h
        Include/Common/MofCommonAndroid.h
        Include/Common/MofCommonWindows.h
        Include/Common/MofID.h
        Include/Common/PackFile.h
        Include/Common/PackFile.inl
        Include/Common/Platform.h
        Include/Common/Queue.h
        Include/Common/Queue.inl
        Include/Common/ReadFile.h
        Include/Common/ReadFile.inl
        Include/Common/ResourceReferenceDebugger.h
        Include/Common/ResourceReferenceDebugger.inl
        Include/Common/SmartPointer.h
        Include/Common/SmartPointer.inl
        Include/Common/String.h
        Include/Common/StringImpl.h
        Include/Common/StringImpl.inl
        Include/Common/Thread.h
        Include/Common/Thread.inl
        Include/Common/WinMultiGameApplication.h
        Include/Common/WinMultiGameApplication.inl
        Include/Common/WinSingleGameApplication.h
        Include/Common/WinSingleGameApplication.inl
        Include/Common/WriteChunkFile.h
        Include/Common/WriteChunkFile.inl
        Include/Common/WriteFile.h
        Include/Common/WriteFile.inl
        Include/Framework/Android/AndroidFrameTimer.h
        Include/Framework/Android/AndroidFrameTimer.inl
        Include/Framework/Android/AndroidJNIGameFramework.h
        Include/Framework/Android/AndroidJNIGameFramework.inl
        Include/Framework/Window/Windows/DefWindowProc.h
        Include/Framework/Window/Windows/ImeProc.h
        Include/Framework/Window/Windows/ImeProc.inl
        Include/Framework/Window/Windows/WindowBase.h
        Include/Framework/Window/Windows/WindowBase.inl
        Include/Framework/Window/Windows/WinWindow.h
        Include/Framework/Window/Window.h
        Include/Framework/Window/WindowProc.h
        Include/Framework/Windows/DirectX11/DX11GameFramework.h
        Include/Framework/Windows/WindowsFrameTimer.h
        Include/Framework/Windows/WindowsFrameTimer.inl
        Include/Framework/Windows/WindowsGameFramework.h
        Include/Framework/Windows/WindowsGameFramework.inl
        Include/Framework/FrameTimer.h
        Include/Framework/Framework.h
        Include/Framework/GameFrameworkBase.h
        Include/Graphics/DirectX11/DirectXTex/DirectXTex.h
        Include/Graphics/DirectX11/DirectXTex/DirectXTex.inl
        Include/Graphics/DirectX11/Effects11/d3dx11effect.h
        Include/Graphics/DirectX11/Effects11/d3dxGlobal.h
        Include/Graphics/DirectX11/Shader/2DPrimitiveBase.h
        Include/Graphics/DirectX11/Shader/2DPrimitiveInstanceBase.h
        Include/Graphics/DirectX11/Shader/3DPrimitiveBase.h
        Include/Graphics/DirectX11/Shader/3DPrimitiveInstanceBase.h
        Include/Graphics/DirectX11/Shader/Bloom.h
        Include/Graphics/DirectX11/Shader/BrightPass.h
        Include/Graphics/DirectX11/Shader/BumpMapping.h
        Include/Graphics/DirectX11/Shader/BumpMappingSkinned.h
        Include/Graphics/DirectX11/Shader/CascadeShadowMap_Renderer.h
        Include/Graphics/DirectX11/Shader/CascadeShadowMap_RendererSkinned.h
        Include/Graphics/DirectX11/Shader/CascadeVarianceShadowMap.h
        Include/Graphics/DirectX11/Shader/CascadeVarianceShadowMap_Renderer.h
        Include/Graphics/DirectX11/Shader/CascadeVarianceShadowMap_RendererSkinned.h
        Include/Graphics/DirectX11/Shader/DeferredBase.h
        Include/Graphics/DirectX11/Shader/DeferredBaseSkinned.h
        Include/Graphics/DirectX11/Shader/DeferredLighting.h
        Include/Graphics/DirectX11/Shader/DepthOfField.h
        Include/Graphics/DirectX11/Shader/DepthOutput.h
        Include/Graphics/DirectX11/Shader/DepthOutput_Single.h
        Include/Graphics/DirectX11/Shader/DepthOutputSkinned.h
        Include/Graphics/DirectX11/Shader/DepthOutputSkinned_Single.h
        Include/Graphics/DirectX11/Shader/DownScale2x2.h
        Include/Graphics/DirectX11/Shader/DownScale3x3Lum.h
        Include/Graphics/DirectX11/Shader/EdgeBaseOutput.h
        Include/Graphics/DirectX11/Shader/EdgeBaseOutput_Single.h
        Include/Graphics/DirectX11/Shader/EdgeBaseOutputSkinned.h
        Include/Graphics/DirectX11/Shader/EdgeBaseOutputSkinned_Single.h
        Include/Graphics/DirectX11/Shader/EdgeMaskOutput.h
        Include/Graphics/DirectX11/Shader/EdgeMaskOutputSkinned.h
        Include/Graphics/DirectX11/Shader/GBlur.h
        Include/Graphics/DirectX11/Shader/HDRBrightPass.h
        Include/Graphics/DirectX11/Shader/SampleLuminance.h
        Include/Graphics/DirectX11/Shader/ShadowMap_Renderer.h
        Include/Graphics/DirectX11/Shader/ShadowMap_RendererSkinned.h
        Include/Graphics/DirectX11/Shader/ShadowMap_Texture.h
        Include/Graphics/DirectX11/Shader/ShadowMap_TextureSkinned.h
        Include/Graphics/DirectX11/Shader/SimpleBlur.h
        Include/Graphics/DirectX11/Shader/SkinnedBase.h
        Include/Graphics/DirectX11/Shader/SpriteBase.h
        Include/Graphics/DirectX11/Shader/SpriteContainer.h
        Include/Graphics/DirectX11/Shader/SpriteInstanceBase.h
        Include/Graphics/DirectX11/Shader/SpriteInstanceColor.h
        Include/Graphics/DirectX11/Shader/ToneMap.h
        Include/Graphics/DirectX11/Shader/ToonEdge.h
        Include/Graphics/DirectX11/Shader/ToonShader.h
        Include/Graphics/DirectX11/Shader/ToonShaderSkinned.h
        Include/Graphics/DirectX11/Shader/VarianceShadowMap_Texture.h
        Include/Graphics/DirectX11/Shader/VarianceShadowMap_TextureSkinned.h
        Include/Graphics/DirectX11/DX11Common.h
        Include/Graphics/DirectX11/DX11DepthTarget.h
        Include/Graphics/DirectX11/DX11DepthTarget.inl
        Include/Graphics/DirectX11/DX11Font.h
        Include/Graphics/DirectX11/DX11Font.inl
        Include/Graphics/DirectX11/DX11Geometry.h
        Include/Graphics/DirectX11/DX11Geometry.inl
        Include/Graphics/DirectX11/DX11GeometryInstanced.h
        Include/Graphics/DirectX11/DX11GeometryInstanced.inl
        Include/Graphics/DirectX11/DX11Graphics.h
        Include/Graphics/DirectX11/DX11Graphics.inl
        Include/Graphics/DirectX11/DX11IndexBuffer.h
        Include/Graphics/DirectX11/DX11IndexBuffer.inl
        Include/Graphics/DirectX11/DX11Material.h
        Include/Graphics/DirectX11/DX11Material.inl
        Include/Graphics/DirectX11/DX11Mesh.h
        Include/Graphics/DirectX11/DX11Mesh.inl
        Include/Graphics/DirectX11/DX11MeshContainer.h
        Include/Graphics/DirectX11/DX11MeshContainer.inl
        Include/Graphics/DirectX11/DX11RenderTarget.h
        Include/Graphics/DirectX11/DX11RenderTarget.inl
        Include/Graphics/DirectX11/DX11Shader.h
        Include/Graphics/DirectX11/DX11Shader.inl
        Include/Graphics/DirectX11/DX11ShaderBind_2DPrimitiveBase.h
        Include/Graphics/DirectX11/DX11ShaderBind_2DPrimitiveBase.inl
        Include/Graphics/DirectX11/DX11ShaderBind_3DPrimitiveBase.h
        Include/Graphics/DirectX11/DX11ShaderBind_3DPrimitiveBase.inl
        Include/Graphics/DirectX11/DX11ShaderBind_Bloom.h
        Include/Graphics/DirectX11/DX11ShaderBind_Bloom.inl
        Include/Graphics/DirectX11/DX11ShaderBind_BrightPass.h
        Include/Graphics/DirectX11/DX11ShaderBind_BrightPass.inl
        Include/Graphics/DirectX11/DX11ShaderBind_BumpMapping.h
        Include/Graphics/DirectX11/DX11ShaderBind_BumpMapping.inl
        Include/Graphics/DirectX11/DX11ShaderBind_BumpMappingSkinned.h
        Include/Graphics/DirectX11/DX11ShaderBind_BumpMappingSkinned.inl
        Include/Graphics/DirectX11/DX11ShaderBind_CascadeVarianceRenderer.h
        Include/Graphics/DirectX11/DX11ShaderBind_CascadeVarianceRenderer.inl
        Include/Graphics/DirectX11/DX11ShaderBind_CascadeVarianceRendererSkinned.h
        Include/Graphics/DirectX11/DX11ShaderBind_CascadeVarianceRendererSkinned.inl
        Include/Graphics/DirectX11/DX11ShaderBind_DeferredLighting.h
        Include/Graphics/DirectX11/DX11ShaderBind_DeferredLighting.inl
        Include/Graphics/DirectX11/DX11ShaderBind_DepthOfField.h
        Include/Graphics/DirectX11/DX11ShaderBind_DepthOfField.inl
        Include/Graphics/DirectX11/DX11ShaderBind_DepthOutput.h
        Include/Graphics/DirectX11/DX11ShaderBind_DepthOutput.inl
        Include/Graphics/DirectX11/DX11ShaderBind_DepthOutputSkinned.h
        Include/Graphics/DirectX11/DX11ShaderBind_DepthOutputSkinned.inl
        Include/Graphics/DirectX11/DX11ShaderBind_DownScale.h
        Include/Graphics/DirectX11/DX11ShaderBind_DownScale.inl
        Include/Graphics/DirectX11/DX11ShaderBind_EdgeBaseOutput.h
        Include/Graphics/DirectX11/DX11ShaderBind_EdgeBaseOutput.inl
        Include/Graphics/DirectX11/DX11ShaderBind_EdgeBaseOutputSkinned.h
        Include/Graphics/DirectX11/DX11ShaderBind_EdgeBaseOutputSkinned.inl
        Include/Graphics/DirectX11/DX11ShaderBind_GaussianBlur.h
        Include/Graphics/DirectX11/DX11ShaderBind_GaussianBlur.inl
        Include/Graphics/DirectX11/DX11ShaderBind_HDRBrightPass.h
        Include/Graphics/DirectX11/DX11ShaderBind_HDRBrightPass.inl
        Include/Graphics/DirectX11/DX11ShaderBind_ShadowRenderer.h
        Include/Graphics/DirectX11/DX11ShaderBind_ShadowRenderer.inl
        Include/Graphics/DirectX11/DX11ShaderBind_ShadowRendererSkinned.h
        Include/Graphics/DirectX11/DX11ShaderBind_ShadowRendererSkinned.inl
        Include/Graphics/DirectX11/DX11ShaderBind_SimpleBlur.h
        Include/Graphics/DirectX11/DX11ShaderBind_SimpleBlur.inl
        Include/Graphics/DirectX11/DX11ShaderBind_SkinGeometryBase.h
        Include/Graphics/DirectX11/DX11ShaderBind_SkinGeometryBase.inl
        Include/Graphics/DirectX11/DX11ShaderBind_SpriteBase.h
        Include/Graphics/DirectX11/DX11ShaderBind_SpriteBase.inl
        Include/Graphics/DirectX11/DX11ShaderBind_SpriteContainer.h
        Include/Graphics/DirectX11/DX11ShaderBind_SpriteContainer.inl
        Include/Graphics/DirectX11/DX11ShaderBind_SpriteInstancedBase.h
        Include/Graphics/DirectX11/DX11ShaderBind_SpriteInstancedBase.inl
        Include/Graphics/DirectX11/DX11ShaderBind_SpriteInstancedColor.h
        Include/Graphics/DirectX11/DX11ShaderBind_SpriteInstancedColor.inl
        Include/Graphics/DirectX11/DX11ShaderBind_ToneMap.h
        Include/Graphics/DirectX11/DX11ShaderBind_ToneMap.inl
        Include/Graphics/DirectX11/DX11ShaderBind_ToonEdge.h
        Include/Graphics/DirectX11/DX11ShaderBind_ToonEdge.inl
        Include/Graphics/DirectX11/DX11ShaderBind_ToonShader.h
        Include/Graphics/DirectX11/DX11ShaderBind_ToonShader.inl
        Include/Graphics/DirectX11/DX11ShaderBind_ToonShaderSkinned.h
        Include/Graphics/DirectX11/DX11ShaderBind_ToonShaderSkinned.inl
        Include/Graphics/DirectX11/DX11ShaderBuffer.h
        Include/Graphics/DirectX11/DX11ShaderBuffer.inl
        Include/Graphics/DirectX11/DX11ShaderLinker.h
        Include/Graphics/DirectX11/DX11ShaderLinker.inl
        Include/Graphics/DirectX11/DX11ShaderPass.h
        Include/Graphics/DirectX11/DX11ShaderPass.inl
        Include/Graphics/DirectX11/DX11ShaderResource.h
        Include/Graphics/DirectX11/DX11ShaderResource.inl
        Include/Graphics/DirectX11/DX11ShaderTechnique.h
        Include/Graphics/DirectX11/DX11ShaderTechnique.inl
        Include/Graphics/DirectX11/DX11Texture.h
        Include/Graphics/DirectX11/DX11Texture.inl
        Include/Graphics/DirectX11/DX11VertexBuffer.h
        Include/Graphics/DirectX11/DX11VertexBuffer.inl
        Include/Graphics/libpng/png.h
        Include/Graphics/libpng/pngconf.h
        Include/Graphics/libpng/pnglibconf.h
        Include/Graphics/mdl/AnalysMDL.h
        Include/Graphics/mdl/AnalysMDL.inl
        Include/Graphics/mdl/ConvertMDL.h
        Include/Graphics/mdl/ConvertMDL.inl
        Include/Graphics/mdl/MDLCommon.h
        Include/Graphics/MQO/AnalysMQO.h
        Include/Graphics/MQO/AnalysMQO.inl
        Include/Graphics/MQO/ConvertMQO.h
        Include/Graphics/MQO/ConvertMQO.inl
        Include/Graphics/MQO/MQOModel.h
        Include/Graphics/MQO/MQOModel.inl
        Include/Graphics/OpenGL/Shader/glsl2DPrimitiveBase.h
        Include/Graphics/OpenGL/Shader/glsl3DPrimitiveBase.h
        Include/Graphics/OpenGL/Shader/glslBloom.h
        Include/Graphics/OpenGL/Shader/glslBrightPass.h
        Include/Graphics/OpenGL/Shader/glslBumpMapping.h
        Include/Graphics/OpenGL/Shader/glslBumpMappingSkinned.h
        Include/Graphics/OpenGL/Shader/glslCascadeShadowMap_Renderer.h
        Include/Graphics/OpenGL/Shader/glslCascadeShadowMap_RendererSkinned.h
        Include/Graphics/OpenGL/Shader/glslCascadeVarianceShadowMap.h
        Include/Graphics/OpenGL/Shader/glslCascadeVarianceShadowMap_Renderer.h
        Include/Graphics/OpenGL/Shader/glslCascadeVarianceShadowMap_RendererSkinned.h
        Include/Graphics/OpenGL/Shader/glslDepthOfField.h
        Include/Graphics/OpenGL/Shader/glslDepthOutput_Single.h
        Include/Graphics/OpenGL/Shader/glslDepthOutputSkinned_Single.h
        Include/Graphics/OpenGL/Shader/glslDownScale2x2.h
        Include/Graphics/OpenGL/Shader/glslDownScale3x3Lum.h
        Include/Graphics/OpenGL/Shader/glslEdgeBaseOutput_Single.h
        Include/Graphics/OpenGL/Shader/glslEdgeBaseOutputSkinned_Single.h
        Include/Graphics/OpenGL/Shader/glslEdgeMaskOutput.h
        Include/Graphics/OpenGL/Shader/glslEdgeMaskOutputSkinned.h
        Include/Graphics/OpenGL/Shader/glslGBlur.h
        Include/Graphics/OpenGL/Shader/glslHDRBrightPass.h
        Include/Graphics/OpenGL/Shader/glslSampleLuminance.h
        Include/Graphics/OpenGL/Shader/glslShadowMap_Renderer.h
        Include/Graphics/OpenGL/Shader/glslShadowMap_RendererSkinned.h
        Include/Graphics/OpenGL/Shader/glslShadowMap_Texture.h
        Include/Graphics/OpenGL/Shader/glslShadowMap_TextureSkinned.h
        Include/Graphics/OpenGL/Shader/glslSimpleBlur.h
        Include/Graphics/OpenGL/Shader/glslSkinnedBase.h
        Include/Graphics/OpenGL/Shader/glslSpriteBase.h
        Include/Graphics/OpenGL/Shader/glslToneMap.h
        Include/Graphics/OpenGL/Shader/glslToonEdge.h
        Include/Graphics/OpenGL/Shader/glslToonShader.h
        Include/Graphics/OpenGL/Shader/glslToonShaderSkinned.h
        Include/Graphics/OpenGL/Shader/glslVarianceShadowMap_Texture.h
        Include/Graphics/OpenGL/Shader/glslVarianceShadowMap_TextureSkinned.h
        Include/Graphics/OpenGL/GLCommon.h
        Include/Graphics/OpenGL/GLDepthTarget.h
        Include/Graphics/OpenGL/GLDepthTarget.inl
        Include/Graphics/OpenGL/GLFont.h
        Include/Graphics/OpenGL/GLFont.inl
        Include/Graphics/OpenGL/GLGeometry.h
        Include/Graphics/OpenGL/GLGeometry.inl
        Include/Graphics/OpenGL/GLGeometryInstanced.h
        Include/Graphics/OpenGL/GLGeometryInstanced.inl
        Include/Graphics/OpenGL/GLGraphics.h
        Include/Graphics/OpenGL/GLGraphics.inl
        Include/Graphics/OpenGL/GLIndexBuffer.h
        Include/Graphics/OpenGL/GLIndexBuffer.inl
        Include/Graphics/OpenGL/GLMaterial.h
        Include/Graphics/OpenGL/GLMaterial.inl
        Include/Graphics/OpenGL/GLMesh.h
        Include/Graphics/OpenGL/GLMesh.inl
        Include/Graphics/OpenGL/GLMeshContainer.h
        Include/Graphics/OpenGL/GLMeshContainer.inl
        Include/Graphics/OpenGL/GLRenderTarget.h
        Include/Graphics/OpenGL/GLRenderTarget.inl
        Include/Graphics/OpenGL/GLShader.h
        Include/Graphics/OpenGL/GLShader.inl
        Include/Graphics/OpenGL/GLShaderBind_2DPrimitiveBase.h
        Include/Graphics/OpenGL/GLShaderBind_2DPrimitiveBase.inl
        Include/Graphics/OpenGL/GLShaderBind_3DPrimitiveBase.h
        Include/Graphics/OpenGL/GLShaderBind_3DPrimitiveBase.inl
        Include/Graphics/OpenGL/GLShaderBind_Bloom.h
        Include/Graphics/OpenGL/GLShaderBind_Bloom.inl
        Include/Graphics/OpenGL/GLShaderBind_BrightPass.h
        Include/Graphics/OpenGL/GLShaderBind_BrightPass.inl
        Include/Graphics/OpenGL/GLShaderBind_BumpMapping.h
        Include/Graphics/OpenGL/GLShaderBind_BumpMapping.inl
        Include/Graphics/OpenGL/GLShaderBind_BumpMappingSkinned.h
        Include/Graphics/OpenGL/GLShaderBind_BumpMappingSkinned.inl
        Include/Graphics/OpenGL/GLShaderBind_CascadeVarianceRenderer.h
        Include/Graphics/OpenGL/GLShaderBind_CascadeVarianceRenderer.inl
        Include/Graphics/OpenGL/GLShaderBind_CascadeVarianceRendererSkinned.h
        Include/Graphics/OpenGL/GLShaderBind_CascadeVarianceRendererSkinned.inl
        Include/Graphics/OpenGL/GLShaderBind_DepthOfField.h
        Include/Graphics/OpenGL/GLShaderBind_DepthOfField.inl
        Include/Graphics/OpenGL/GLShaderBind_DepthOutput.h
        Include/Graphics/OpenGL/GLShaderBind_DepthOutput.inl
        Include/Graphics/OpenGL/GLShaderBind_DepthOutputSkinned.h
        Include/Graphics/OpenGL/GLShaderBind_DepthOutputSkinned.inl
        Include/Graphics/OpenGL/GLShaderBind_DownScale.h
        Include/Graphics/OpenGL/GLShaderBind_DownScale.inl
        Include/Graphics/OpenGL/GLShaderBind_EdgeBaseOutput.h
        Include/Graphics/OpenGL/GLShaderBind_EdgeBaseOutput.inl
        Include/Graphics/OpenGL/GLShaderBind_EdgeBaseOutputSkinned.h
        Include/Graphics/OpenGL/GLShaderBind_EdgeBaseOutputSkinned.inl
        Include/Graphics/OpenGL/GLShaderBind_GaussianBlur.h
        Include/Graphics/OpenGL/GLShaderBind_GaussianBlur.inl
        Include/Graphics/OpenGL/GLShaderBind_HDRBrightPass.h
        Include/Graphics/OpenGL/GLShaderBind_HDRBrightPass.inl
        Include/Graphics/OpenGL/GLShaderBind_ShadowRenderer.h
        Include/Graphics/OpenGL/GLShaderBind_ShadowRenderer.inl
        Include/Graphics/OpenGL/GLShaderBind_ShadowRendererSkinned.h
        Include/Graphics/OpenGL/GLShaderBind_ShadowRendererSkinned.inl
        Include/Graphics/OpenGL/GLShaderBind_SimpleBlur.h
        Include/Graphics/OpenGL/GLShaderBind_SimpleBlur.inl
        Include/Graphics/OpenGL/GLShaderBind_SkinGeometryBase.h
        Include/Graphics/OpenGL/GLShaderBind_SkinGeometryBase.inl
        Include/Graphics/OpenGL/GLShaderBind_SpriteBase.h
        Include/Graphics/OpenGL/GLShaderBind_SpriteBase.inl
        Include/Graphics/OpenGL/GLShaderBind_ToneMap.h
        Include/Graphics/OpenGL/GLShaderBind_ToneMap.inl
        Include/Graphics/OpenGL/GLShaderBind_ToonEdge.h
        Include/Graphics/OpenGL/GLShaderBind_ToonEdge.inl
        Include/Graphics/OpenGL/GLShaderBind_ToonShader.h
        Include/Graphics/OpenGL/GLShaderBind_ToonShader.inl
        Include/Graphics/OpenGL/GLShaderBind_ToonShaderSkinned.h
        Include/Graphics/OpenGL/GLShaderBind_ToonShaderSkinned.inl
        Include/Graphics/OpenGL/GLShaderPass.h
        Include/Graphics/OpenGL/GLShaderPass.inl
        Include/Graphics/OpenGL/GLShaderTechnique.h
        Include/Graphics/OpenGL/GLShaderTechnique.inl
        Include/Graphics/OpenGL/GLTexture.h
        Include/Graphics/OpenGL/GLTexture.inl
        Include/Graphics/OpenGL/GLVertexBuffer.h
        Include/Graphics/OpenGL/GLVertexBuffer.inl
        Include/Graphics/PhotoShop/ConvertPsd.h
        Include/Graphics/PhotoShop/ConvertPsd.inl
        Include/Graphics/PhotoShop/ImageReader.h
        Include/Graphics/PhotoShop/ImageReader.inl
        Include/Graphics/PhotoShop/PSDReader.h
        Include/Graphics/PhotoShop/PSDReader.inl
        Include/Graphics/PMD/ConvertPMD.h
        Include/Graphics/PMD/ConvertPMD.inl
        Include/Graphics/PMD/ConvertPMX.h
        Include/Graphics/PMD/ConvertPMX.inl
        Include/Graphics/PMD/ConvertVMD.h
        Include/Graphics/PMD/ConvertVMD.inl
        Include/Graphics/PMD/ConvertVPD.h
        Include/Graphics/PMD/ConvertVPD.inl
        Include/Graphics/SpriteStudio/babel/babel.h
        Include/Graphics/SpriteStudio/ConvertSpriteStudio.h
        Include/Graphics/SpriteStudio/ConvertSpriteStudio.inl
        Include/Graphics/SpriteStudio/ssarchiver.h
        Include/Graphics/SpriteStudio/ssattribute.h
        Include/Graphics/SpriteStudio/SsEffectBehavior.h
        Include/Graphics/SpriteStudio/SsEffectElement.h
        Include/Graphics/SpriteStudio/ssInterpolation.h
        Include/Graphics/SpriteStudio/ssloader.h
        Include/Graphics/SpriteStudio/ssloader_ssae.h
        Include/Graphics/SpriteStudio/ssloader_ssce.h
        Include/Graphics/SpriteStudio/ssloader_ssee.h
        Include/Graphics/SpriteStudio/ssloader_sspj.h
        Include/Graphics/SpriteStudio/ssstring_uty.h
        Include/Graphics/SpriteStudio/sstypes.h
        Include/Graphics/SpriteStudio/ssvalue.h
        Include/Graphics/XFile/AnalysX.h
        Include/Graphics/XFile/AnalysX.inl
        Include/Graphics/XFile/ConvertX.h
        Include/Graphics/XFile/ConvertX.inl
        Include/Graphics/XFile/XModel.h
        Include/Graphics/XFile/XModel.inl
        Include/Graphics/AnalysMesh.h
        Include/Graphics/AnalysMesh.inl
        Include/Graphics/AnalysSprite.h
        Include/Graphics/AnalysSprite.inl
        Include/Graphics/Bone.h
        Include/Graphics/BoneBase.h
        Include/Graphics/BoneBase.inl
        Include/Graphics/Camera.h
        Include/Graphics/CameraBase.h
        Include/Graphics/CameraBase.inl
        Include/Graphics/CCDIK.h
        Include/Graphics/CCDIK.inl
        Include/Graphics/CCDJoint.h
        Include/Graphics/CCDJoint.inl
        Include/Graphics/DepthTarget.h
        Include/Graphics/DirectionalLight.h
        Include/Graphics/DirectionalLight.inl
        Include/Graphics/Font.h
        Include/Graphics/FontBase.h
        Include/Graphics/FontBase.inl
        Include/Graphics/Geometry.h
        Include/Graphics/GeometryBase.h
        Include/Graphics/GeometryBase.inl
        Include/Graphics/GeometryInstancedBase.h
        Include/Graphics/GeometryInstancedBase.inl
        Include/Graphics/GeometryMorphing.h
        Include/Graphics/GeometryMorphingBase.h
        Include/Graphics/GeometryMorphingBase.inl
        Include/Graphics/Graphics.h
        Include/Graphics/GraphicsCommon.h
        Include/Graphics/GraphicsPlatform.h
        Include/Graphics/IndexBuffer.h
        Include/Graphics/IndexBufferBase.h
        Include/Graphics/IndexBufferBase.inl
        Include/Graphics/Light.h
        Include/Graphics/LightBase.h
        Include/Graphics/LightBase.inl
        Include/Graphics/Material.h
        Include/Graphics/MaterialBase.h
        Include/Graphics/MaterialBase.inl
        Include/Graphics/Mesh.h
        Include/Graphics/MeshAnimation.h
        Include/Graphics/MeshAnimationBase.h
        Include/Graphics/MeshAnimationBase.inl
        Include/Graphics/MeshBase.h
        Include/Graphics/MeshBase.inl
        Include/Graphics/MeshBlock.h
        Include/Graphics/MeshBlock.inl
        Include/Graphics/MeshBoneAnimation.h
        Include/Graphics/MeshBoneAnimationBase.h
        Include/Graphics/MeshBoneAnimationBase.inl
        Include/Graphics/MeshCamera.h
        Include/Graphics/MeshCameraAnimation.h
        Include/Graphics/MeshCameraAnimationBase.h
        Include/Graphics/MeshCameraAnimationBase.inl
        Include/Graphics/MeshCameraBase.h
        Include/Graphics/MeshCameraBase.inl
        Include/Graphics/MeshContainer.h
        Include/Graphics/MeshContainerBase.h
        Include/Graphics/MeshContainerBase.inl
        Include/Graphics/MeshMorphingAnimation.h
        Include/Graphics/MeshMorphingAnimationBase.h
        Include/Graphics/MeshMorphingAnimationBase.inl
        Include/Graphics/MeshMotionController.h
        Include/Graphics/MeshMotionController.inl
        Include/Graphics/MomCommon.h
        Include/Graphics/MosCommon.h
        Include/Graphics/MotionController.h
        Include/Graphics/PolyCircle.h
        Include/Graphics/PolyCircle.inl
        Include/Graphics/PolyLine.h
        Include/Graphics/PolyLine.inl
        Include/Graphics/RenderCommand.h
        Include/Graphics/RenderCommand.inl
        Include/Graphics/RenderCommandProxy.h
        Include/Graphics/RenderCommandProxy.inl
        Include/Graphics/RenderCommandProxyImpl.h
        Include/Graphics/RenderTarget.h
        Include/Graphics/RenderThread.h
        Include/Graphics/RenderThread.inl
        Include/Graphics/Shader.h
        Include/Graphics/ShaderBase.h
        Include/Graphics/ShaderBase.inl
        Include/Graphics/ShaderBind.h
        Include/Graphics/ShaderBind_GaussianBlurBase.h
        Include/Graphics/ShaderBind_GaussianBlurBase.inl
        Include/Graphics/ShaderBindBase.h
        Include/Graphics/ShaderBindBase.inl
        Include/Graphics/ShaderBuffer.h
        Include/Graphics/ShaderBufferBase.h
        Include/Graphics/ShaderBufferBase.inl
        Include/Graphics/ShaderEffect.h
        Include/Graphics/ShaderEffect_2DBase.h
        Include/Graphics/ShaderEffect_2DBase.inl
        Include/Graphics/ShaderEffect_3DBase.h
        Include/Graphics/ShaderEffect_3DBase.inl
        Include/Graphics/ShaderEffect_Bloom.h
        Include/Graphics/ShaderEffect_Bloom.inl
        Include/Graphics/ShaderEffect_BlurBase.h
        Include/Graphics/ShaderEffect_BrightPass.h
        Include/Graphics/ShaderEffect_BrightPass.inl
        Include/Graphics/ShaderEffect_BumpMapping.h
        Include/Graphics/ShaderEffect_BumpMapping.inl
        Include/Graphics/ShaderEffect_CascadedShadowMap.h
        Include/Graphics/ShaderEffect_CascadedShadowMap.inl
        Include/Graphics/ShaderEffect_CascadeVarianceRenderer.h
        Include/Graphics/ShaderEffect_CascadeVarianceRenderer.inl
        Include/Graphics/ShaderEffect_DeferredLighting.h
        Include/Graphics/ShaderEffect_DeferredLighting.inl
        Include/Graphics/ShaderEffect_DepthOfField.h
        Include/Graphics/ShaderEffect_DepthOfField.inl
        Include/Graphics/ShaderEffect_DepthOutput.h
        Include/Graphics/ShaderEffect_DepthOutput.inl
        Include/Graphics/ShaderEffect_DownScale.h
        Include/Graphics/ShaderEffect_DownScale.inl
        Include/Graphics/ShaderEffect_EdgeBaseOutput.h
        Include/Graphics/ShaderEffect_EdgeBaseOutput.inl
        Include/Graphics/ShaderEffect_EdgeMaskOutput.h
        Include/Graphics/ShaderEffect_EdgeMaskOutput.inl
        Include/Graphics/ShaderEffect_GaussianBlur.h
        Include/Graphics/ShaderEffect_GaussianBlur.inl
        Include/Graphics/ShaderEffect_HDR.h
        Include/Graphics/ShaderEffect_HDR.inl
        Include/Graphics/ShaderEffect_HDRBrightPass.h
        Include/Graphics/ShaderEffect_HDRBrightPass.inl
        Include/Graphics/ShaderEffect_SampleLuminance.h
        Include/Graphics/ShaderEffect_SampleLuminance.inl
        Include/Graphics/ShaderEffect_ShadowMap.h
        Include/Graphics/ShaderEffect_ShadowMap.inl
        Include/Graphics/ShaderEffect_ShadowRenderer.h
        Include/Graphics/ShaderEffect_ShadowRenderer.inl
        Include/Graphics/ShaderEffect_ShadowTexture.h
        Include/Graphics/ShaderEffect_ShadowTexture.inl
        Include/Graphics/ShaderEffect_SimpleBlur.h
        Include/Graphics/ShaderEffect_SimpleBlur.inl
        Include/Graphics/ShaderEffect_ToonEdge.h
        Include/Graphics/ShaderEffect_ToonEdge.inl
        Include/Graphics/ShaderEffect_ToonShader.h
        Include/Graphics/ShaderEffect_ToonShader.inl
        Include/Graphics/ShaderLinker.h
        Include/Graphics/ShaderLinkerBase.h
        Include/Graphics/ShaderLinkerBase.inl
        Include/Graphics/ShaderPass.h
        Include/Graphics/ShaderPassBase.h
        Include/Graphics/ShaderPassBase.inl
        Include/Graphics/ShaderResource.h
        Include/Graphics/ShaderResourceBase.h
        Include/Graphics/ShaderResourceBase.inl
        Include/Graphics/ShaderTechnique.h
        Include/Graphics/ShaderTechniqueBase.h
        Include/Graphics/ShaderTechniqueBase.inl
        Include/Graphics/Sprite.h
        Include/Graphics/Sprite2D.h
        Include/Graphics/Sprite2D.inl
        Include/Graphics/Sprite2DContainer.h
        Include/Graphics/Sprite2DContainer.inl
        Include/Graphics/Sprite2DEffect.h
        Include/Graphics/Sprite2DEffect.inl
        Include/Graphics/Sprite2DPart.h
        Include/Graphics/Sprite2DPart.inl
        Include/Graphics/Sprite3D.h
        Include/Graphics/Sprite3D.inl
        Include/Graphics/SpriteAnimation.h
        Include/Graphics/SpriteAnimation.inl
        Include/Graphics/SpriteBase.h
        Include/Graphics/SpriteBase.inl
        Include/Graphics/SpriteContainerAnimation.h
        Include/Graphics/SpriteContainerAnimation.inl
        Include/Graphics/SpriteMotionController.h
        Include/Graphics/SpriteMotionController.inl
        Include/Graphics/SpritePartAnimation.h
        Include/Graphics/SpritePartAnimation.inl
        Include/Graphics/SpritePartMotionController.h
        Include/Graphics/SpritePartMotionController.inl
        Include/Graphics/Texture.h
        Include/Graphics/TextureBase.h
        Include/Graphics/TextureBase.inl
        Include/Graphics/VertexBuffer.h
        Include/Graphics/VertexBufferBase.h
        Include/Graphics/VertexBufferBase.inl
        Include/Graphics/WriteMesh.h
        Include/Graphics/WriteMesh.inl
        Include/Input/Android/AndroidInput.h
        Include/Input/Android/AndroidInput.inl
        Include/Input/DirectInput/DirectInput.h
        Include/Input/DirectInput/DirectInput.inl
        Include/Input/DirectInput/DirectInputGamePad.h
        Include/Input/DirectInput/DirectInputGamePad.inl
        Include/Input/XInput/XInputGamePad.h
        Include/Input/XInput/XInputGamePad.inl
        Include/Input/GamePad.h
        Include/Input/Input.h
        Include/Input/InputCommon.h
        Include/Math/MathCommon.h
        Include/Math/Matrix33.h
        Include/Math/Matrix33.inl
        Include/Math/Matrix44.h
        Include/Math/Matrix44.inl
        Include/Math/Quaternion.h
        Include/Math/Quaternion.inl
        Include/Math/Random.h
        Include/Math/Random.inl
        Include/Math/Vector2.h
        Include/Math/Vector2.inl
        Include/Math/Vector3.h
        Include/Math/Vector3.inl
        Include/Math/Vector4.h
        Include/Math/Vector4.inl
        Include/Movie/DirectShow/DShowMovie.h
        Include/Movie/DirectShow/DShowMovie.inl
        Include/Movie/DirectShow/qedit.h
        Include/Movie/Movie.h
        Include/Movie/MovieBase.h
        Include/Movie/MovieBase.inl
        Include/Network/NetworkCommon.h
        Include/Network/Socket.h
        Include/Network/SocketBase.h
        Include/Network/SocketBase.inl
        Include/Network/UdpSocket.h
        Include/Network/UdpSocket.inl
        Include/Sound/MP3/MP3File.h
        Include/Sound/MP3/MP3File.inl
        Include/Sound/OGG/codec.h
        Include/Sound/OGG/ogg.h
        Include/Sound/OGG/os_types.h
        Include/Sound/OGG/vorbisenc.h
        Include/Sound/OGG/vorbisfile.h
        Include/Sound/OpenAL/ALSound.h
        Include/Sound/OpenAL/ALSound.inl
        Include/Sound/OpenSL/SLSound.h
        Include/Sound/OpenSL/SLSound.inl
        Include/Sound/OpenSL/SLSoundBuffer.h
        Include/Sound/OpenSL/SLSoundBuffer.inl
        Include/Sound/OpenSL/SLStreamingSoundBuffer.h
        Include/Sound/OpenSL/SLStreamingSoundBuffer.inl
        Include/Sound/XAudio/audiodefs.h
        Include/Sound/XAudio/comdecl.h
        Include/Sound/XAudio/XAudio2.h
        Include/Sound/XAudio/XAudio2fx.h
        Include/Sound/XAudio/XAudioSound.h
        Include/Sound/XAudio/XAudioSound.inl
        Include/Sound/XAudio/XAudioSoundBuffer.h
        Include/Sound/XAudio/XAudioSoundBuffer.inl
        Include/Sound/XAudio/XAudioStreamingSoundBuffer.h
        Include/Sound/XAudio/XAudioStreamingSoundBuffer.inl
        Include/Sound/XAudio/xma2defs.h
        Include/Sound/Sound.h
        Include/Sound/SoundBuffer.h
        Include/Sound/SoundBufferBase.h
        Include/Sound/SoundBufferBase.inl
        Include/Sound/SoundCommon.h
        Include/Sound/SoundPlatform.h
        Include/Utilities/CollisionUtilities.h
        Include/Utilities/CollisionUtilities.inl
        Include/Utilities/GraphicsUtilities.h
        Include/Utilities/GraphicsUtilities.inl
        Include/Utilities/InputUtilities.h
        Include/Utilities/InputUtilities.inl
        Include/Utilities/SoundUtilities.h
        Include/Utilities/SoundUtilities.inl
        Include/Utilities/Utilities.h
        Include/Utilities/Utilities.inl
        Include/XML/tinyxml2.h
        Include/XML/XMLDocument.h
        Include/XML/XMLDocument.inl
        Include/Mof.h)
